third_party/move/move-compiler-v2/tests/lambda/inline-parity/return_in_lambda_typed.lambda.exp
// -- Model dump before bytecode pipeline
module 0x42::Test {
    private fun adder(x: u64,y: u64): u64 {
        Add<u64>(x, y)
    }
    private fun apply(f: |(u64, u64)|u64,x: u64,y: u64): u64 {
        (f)(x, y)
    }
    public fun main(): u64 {
        Test::apply(closure#0Test::main$lambda$1(), 10, 100);
        Test::apply(closure#0Test::main$lambda$2(), 10, 100);
        Test::apply(closure#0Test::main$lambda$3(), 10, 100)
    }
    private fun main$lambda$1(x: u64,y: u64): u64 {
        return Test::adder(x, y)
    }
    private fun main$lambda$2(x: u64,y: u64): u64 {
        return Test::adder(x, y)
    }
    private fun main$lambda$3(x: u64,y: u64): u64 {
        return Test::adder(x, y)
    }
} // end 0x42::Test

// -- Sourcified model before bytecode pipeline
module 0x42::Test {
    fun adder(x: u64, y: u64): u64 {
        x + y
    }
    fun apply(f: |(u64, u64)|u64, x: u64, y: u64): u64 {
        f(x, y)
    }
    public fun main(): u64 {
        apply(|(arg0,arg1)| main$lambda$1(arg0, arg1), 10, 100);
        apply(|(arg0,arg1)| main$lambda$2(arg0, arg1), 10, 100);
        apply(|(arg0,arg1)| main$lambda$3(arg0, arg1), 10, 100)
    }
    fun main$lambda$1(x: u64, y: u64): u64 {
        adder(x, y)
    }
    fun main$lambda$2(x: u64, y: u64): u64 {
        adder(x, y)
    }
    fun main$lambda$3(x: u64, y: u64): u64 {
        adder(x, y)
    }
}


Diagnostics:
error: Calls to function values other than inline function parameters not yet implemented
  ┌─ tests/lambda/inline-parity/return_in_lambda_typed.move:4:9
  │
4 │         f(x, y)
  │         ^^^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
   ┌─ tests/lambda/inline-parity/return_in_lambda_typed.move:12:15
   │
12 │           apply(|x: u64, y: u64| {
   │ ╭───────────────^
13 │ │             return adder(x, y)
14 │ │         }, 10, 100);
   │ ╰─────────^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
   ┌─ tests/lambda/inline-parity/return_in_lambda_typed.move:15:15
   │
15 │           apply(|x: u64, y| {
   │ ╭───────────────^
16 │ │             return adder(x, y)
17 │ │         }, 10, 100);
   │ ╰─────────^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
   ┌─ tests/lambda/inline-parity/return_in_lambda_typed.move:18:15
   │
18 │           apply(|x, y: u64| {
   │ ╭───────────────^
19 │ │             return adder(x, y)
20 │ │         }, 10, 100)
   │ ╰─────────^
